--- a/public/pages/canvas/style.module.css
+++ b/public/pages/canvas/style.module.css
@@ -7,7 +7,7 @@
     margin: 0 auto;
 } */
 .controls {
-    padding: 1rem;;
+    padding: 1rem;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
